# data.gov

./: .editorconfig  .gitattributes  .gitignore  .kitchen.apache.yml  .kitchen.yml  .snyk  1102 Experience Development Tool - Sept 2023 Update (1).xlsx  2023-saorm-template.docx  Acquisition Decision Memorandum ADM MS C ADDM Template v 1.4.docx  CONTRIBUTING.md  Clearance Responsibility Summary - Brian Michael Frost - Print Companion (1).docx  DEPENDENCIES.md  Dockerfile  Faith-Based Government Contracting and Delegation of Authority Framework (1).docx  GSA Fleet Permanent Vehicle Assignment Request Package.docx  GSA Integrated Reference Guide - Document Summaries and System Integration (3).docx  Gemfile  InfrastructureAsCode.md  Jenkinsfile  LICENSE.md  Makefile  MarkingDetails.txt  Memorandum of Authorities – Executive Office of the President (2).docx  Official Memorandum Template_10Nov2020 - Copy.dotx  PIV-I_ICAM_Test_Cards.db  PIV-I_Production_Cards.db  PIV_ICAM_Test_Cards.db  PIV_Production_Cards.db  Pipfile  PropertyTransferTemplate_1_0-1.xlsx  Quality Tools - Exam Job Aid.docx  README.md  RFI_CBSAs by Number of NSCs_ 01-17-2024.xlsx  ROADMAP.md  SECURITY.md  SWP-CARD-Template_CAPE-Update-15-May-2023.docx  SYSTEMS.md  TEMP-ADDM_Template_v1 (1).docx  Vagrantfile  ansible.cfg  (+24 more)
.circleci/: config.yml
.github/: dependabot.yml  deploy_failure.md  restart_failure.md  scale_failure.md
ansible/: .ansible-lint  .kitchen.vagrant.yml  README.md  (+80 more)
metrics/: .env  Makefile  README.md  pyproject.toml
metrics/datagov_metrics/: __main__.py  catalog.py  ckan.py  ga.py  s3_util.py
(+1388 files in other folders)
