[tool.poetry]
name = "datagov-metrics"
version = "0.1.0"
description = ""
authors = [
    "Datagov Team <datagov@gsa.gov>",
]
maintainers = [
    "Datagov Team <datagov@gsa.gov>",
]
readme = "README.md"
packages = [{include = "datagov_metrics"}]

[tool.poetry.dependencies]
python = ">=3.10,<4"
google-api-python-client = "^2.129.0"
google-auth = "^2.29.0"
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.2.0"
apiclient = "^1.0.4"
oauth2client = "^4.1.3"
requests = "^2.32.4"
python-dotenv = "^1.0.1"
boto3 = "^1.34.144"
rsa = "^4.7"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.3"

[tool.ruff]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"